# qiskit-shot-planner

./: .gitignore  00-swap-test.ipynb  LICENSE  README.md  pyproject.toml  test_debug.py
.github/workflows/: test.yml
docs/: README.md
examples/adaptive_estimator/: README.md  quickstart.py
examples/adaptive_sampler/: README.md  quickstart.py
examples/error_mitigation/: zne_variance.py
examples/grouping/: README.md  mixed_hamiltonian.py
examples/kagome_heisenberg/: README.md  kagome_energy.py
examples/larger_scale/: README.md  larger_molecule.py  qaoa_scaling.py
examples/pcsc2026/: README.md  repro_coverage.py  repro_noise_sweep.py  repro_qaoa.py  repro_swap.py  repro_vqe_h2.py  repro_zne.py
examples/vs_estimator/: README.md  (+1 more)
experimental/: hoeffding-api.ipynb
notebooks/: 01.5_mvp_noise_models.ipynb  01_mvp_swap_hoeffding.ipynb  02_observables_basics.ipynb  03_multi_qubit_observables.ipynb  04_hamiltonian_expectation.ipynb  05_ebs_introduction.ipynb  06_ebs_theory.ipynb  07_ebs_swap_test.ipynb  08_ebs_vs_hoeffding.ipynb  09_ebs_parameter_tuning.ipynb
old/: 00a-concentration-inequalities-for-bernoulli.ipynb  1-concentration-inequalities.ipynb  2-applying-to-circuits.ipynb  2b-applying-to-swap-test.ipynb
scripts/: beta_sweep.py  coverage_table.py  regen_sim_tables.py  run_hardware.py  run_hardware_zne.py  run_online.py  run_online_stepper.py
tests/: test_bonferroni_clamp.py  test_ebs_coverage.py  test_ebs_math.py  test_ebs_stopper.py  test_estimator.py  test_estimator_smoke.py  test_grouped.py  test_hoeffding.py  test_le_cam.py  test_observables.py  test_running_stats.py  test_sampler.py  test_statevector_value_sampler.py  test_swap_ebs.py  test_swap_identity_statevector.py  test_swap_planning.py
(+40 files in other folders)
