[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qamp-shotplanner"
version = "0.4.0"
description = "Adaptive shot allocation for quantum observable estimation with finite-sample guarantees"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "qiskit>=2.0.0",
    "qiskit-aer>=0.14.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "nbformat",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qamp_shotplanner = ["py.typed"]
